@@ -1,5 +1,5 @@
 dnl
-dnl $Id: config.m4,v 1.28.2.3.2.8 2008/11/07 21:18:45 felipe Exp $ 
+dnl $Id: config.m4,v 1.28.2.3.2.9 2009/05/02 19:55:14 jani Exp $ 
 dnl
 
 PHP_ARG_WITH(curl, for cURL support,
@@ -48,74 +48,79 @@ if test "$PHP_CURL" != "no"; then
   else
     AC_MSG_ERROR(cURL version 7.10.5 or later is required to compile php with cURL support)
   fi
-  
-  AC_MSG_CHECKING([for SSL support in libcurl])
-  CURL_SSL=`$CURL_CONFIG --feature | $EGREP SSL`
-  if test "$CURL_SSL" = "SSL"; then
-   AC_MSG_RESULT([yes])
-   AC_DEFINE([HAVE_CURL_SSL], [1], [Have cURL with  SSL support])
-   
-   save_CFLAGS="$CFLAGS"
-   CFLAGS="`$CURL_CONFIG --cflags`"
-   save_LDFLAGS="$LDFLAGS"
-   LDFLAGS="`$CURL_CONFIG --libs` $ld_runpath_switch$CURL_DIR/$PHP_LIBDIR"
-   
-   AC_PROG_CPP
-   AC_MSG_CHECKING([for openssl support in libcurl])
-   AC_TRY_RUN([
-    #include <curl/curl.h>
-    int main(int argc, char *argv[]) {
-     curl_version_info_data *data = curl_version_info(CURLVERSION_NOW);
-     if (data && data->ssl_version && *data->ssl_version) {
-      const char *ptr = data->ssl_version;
-      while(*ptr == ' ') ++ptr;
-      return strncasecmp(ptr, "OpenSSL", sizeof("OpenSSL")-1);
-     }
-     return 1;
-    }
-   ],[
-    AC_MSG_RESULT([yes])
-    AC_CHECK_HEADERS([openssl/crypto.h], [
-     AC_DEFINE([HAVE_CURL_OPENSSL], [1], [Have cURL with OpenSSL support])
-    ])
-   ], [
-    AC_MSG_RESULT([no])
-   ], [
-    AC_MSG_RESULT([no])
-   ])
-   
-   AC_MSG_CHECKING([for gnutls support in libcurl])
-   AC_TRY_RUN([
-    #include <curl/curl.h>
-    int main(int argc, char *argv[]) {
-     curl_version_info_data *data = curl_version_info(CURLVERSION_NOW);
-     if (data && data->ssl_version && *data->ssl_version) {
-      const char *ptr = data->ssl_version;
-      while(*ptr == ' ') ++ptr;
-      return strncasecmp(ptr, "GnuTLS", sizeof("GnuTLS")-1);
-     }
-     return 1;
-    }
-   ], [
-    AC_MSG_RESULT([yes])
-    AC_CHECK_HEADER([gcrypt.h], [
-     AC_DEFINE([HAVE_CURL_GNUTLS], [1], [Have cURL with GnuTLS support])
-    ])
-   ], [
-    AC_MSG_RESULT([no])
-   ], [
-    AC_MSG_RESULT([no])
-   ])
-   
-   CFLAGS="$save_CFLAGS"
-   LDFLAGS="$save_LDFLAGS"
-  else
-   AC_MSG_RESULT([no])
-  fi
 
   PHP_ADD_INCLUDE($CURL_DIR/include)
   PHP_EVAL_LIBLINE($CURL_LIBS, CURL_SHARED_LIBADD)
   PHP_ADD_LIBRARY_WITH_PATH(curl, $CURL_DIR/$PHP_LIBDIR, CURL_SHARED_LIBADD)
+  
+  AC_MSG_CHECKING([for SSL support in libcurl])
+  CURL_SSL=`$CURL_CONFIG --feature | $EGREP SSL`
+  if test "$CURL_SSL" = "SSL"; then
+    AC_MSG_RESULT([yes])
+    AC_DEFINE([HAVE_CURL_SSL], [1], [Have cURL with  SSL support])
+   
+    save_CFLAGS="$CFLAGS"
+    CFLAGS="`$CURL_CONFIG --cflags`"
+   
+    AC_PROG_CPP
+    AC_MSG_CHECKING([for openssl support in libcurl])
+    AC_TRY_RUN([
+#include <curl/curl.h>
+
+int main(int argc, char *argv[])
+{
+  curl_version_info_data *data = curl_version_info(CURLVERSION_NOW);
+
+  if (data && data->ssl_version && *data->ssl_version) {
+    const char *ptr = data->ssl_version;
+
+    while(*ptr == ' ') ++ptr;
+    return strncasecmp(ptr, "OpenSSL", sizeof("OpenSSL")-1);
+  }
+  return 1;
+}
+    ],[
+      AC_MSG_RESULT([yes])
+      AC_CHECK_HEADERS([openssl/crypto.h], [
+        AC_DEFINE([HAVE_CURL_OPENSSL], [1], [Have cURL with OpenSSL support])
+      ])
+    ], [
+      AC_MSG_RESULT([no])
+    ], [
+      AC_MSG_RESULT([no])
+    ])
+   
+    AC_MSG_CHECKING([for gnutls support in libcurl])
+    AC_TRY_RUN([
+#include <curl/curl.h>
+
+int main(int argc, char *argv[])
+{
+  curl_version_info_data *data = curl_version_info(CURLVERSION_NOW);
+  
+  if (data && data->ssl_version && *data->ssl_version) {
+    const char *ptr = data->ssl_version;
+
+    while(*ptr == ' ') ++ptr;
+    return strncasecmp(ptr, "GnuTLS", sizeof("GnuTLS")-1);
+  }
+  return 1;
+}
+], [
+      AC_MSG_RESULT([yes])
+      AC_CHECK_HEADER([gcrypt.h], [
+        AC_DEFINE([HAVE_CURL_GNUTLS], [1], [Have cURL with GnuTLS support])
+      ])
+    ], [
+      AC_MSG_RESULT([no])
+    ], [
+      AC_MSG_RESULT([no])
+    ])
+   
+    CFLAGS="$save_CFLAGS"
+  else
+    AC_MSG_RESULT([no])
+  fi
 
   PHP_CHECK_LIBRARY(curl,curl_easy_perform, 
   [ 
